--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "from tensorflow.image import resize\n",
     "from scipy.linalg import sqrtm\n",
     "import math\n",
-    "from tqdm.notebook import tqdm\n",
     "import tensorflow as tf\n",
     "from IPython.display import clear_output, HTML\n",
     "import glob\n",
@@ -31,7 +30,6 @@
     "from keras import Input\n",
     "from keras.optimizers import *\n",
     "from keras.callbacks import EarlyStopping\n",
-    "import visualkeras\n",
     "from keras.initializers import RandomNormal\n",
     "from keras.layers import LeakyReLU, GlobalMaxPooling2D, GlobalAveragePooling2D\n",
     "import numpy as np"
@@ -39,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -408,433 +406,13 @@
        "[99040 rows x 785 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   labels    1    2    3    4    5    6    7    8    9  ...  775  776  777  \\\n",
-      "0     119  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-      "1     103  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-      "2     112  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-      "3     111  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-      "4     119  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  ...  0.0  0.0  0.0   \n",
-      "\n",
-      "   778  779  780  781  782  783  784  \n",
-      "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-      "\n",
-      "[5 rows x 785 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Separate labels from pixel values\n",
-    "labels = df['labels']\n",
-    "pixels = df.drop(columns=['labels'])\n",
-    "\n",
-    "# Mapping dictionary\n",
-    "mapping = {-1: 63, 1: 97, 2: 98, 3: 99, 4: 100, 5: 101, 6: 102, 7: 103, 8: 104, 9: 105, 10: 106, 11: 107, 12: 108, 13: 109, 14: 110, 15: 111, 16: 112, 17: 113, 18: 114, 19: 115, 20: 116, 21: 117, 22: 118, 23: 119, 24: 120, 25: 121, 26: 122, 27: 123}\n",
-    "\n",
-    "# Apply label mapping\n",
-    "mapped_labels = labels.map(mapping)\n",
-    "\n",
-    "# Normalize pixel values\n",
-    "normalized_pixels = pixels / 255.0\n",
-    "\n",
-    "# Combine the mapped labels and normalized pixel values\n",
-    "normalized_df = pd.concat([mapped_labels, normalized_pixels], axis=1)\n",
-    "normalized_df.columns = ['labels'] + list(normalized_pixels.columns)\n",
-    "\n",
-    "# Save normalized dataset to a new CSV file\n",
-    "normalized_df.to_csv('normalized_emnist_words.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>labels</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>775</th>\n",
-       "      <th>776</th>\n",
-       "      <th>777</th>\n",
-       "      <th>778</th>\n",
-       "      <th>779</th>\n",
-       "      <th>780</th>\n",
-       "      <th>781</th>\n",
-       "      <th>782</th>\n",
-       "      <th>783</th>\n",
-       "      <th>784</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>119</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>103</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>112</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>111</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>119</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99035</th>\n",
-       "      <td>114</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99036</th>\n",
-       "      <td>120</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99037</th>\n",
-       "      <td>115</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99038</th>\n",
-       "      <td>63</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "      <td>0.682353</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99039</th>\n",
-       "      <td>63</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "      <td>0.164706</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>99040 rows × 785 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       labels         1         2         3         4         5         6  \\\n",
-       "0         119  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "1         103  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "2         112  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "3         111  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "4         119  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "...       ...       ...       ...       ...       ...       ...       ...   \n",
-       "99035     114  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "99036     120  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "99037     115  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000   \n",
-       "99038      63  0.682353  0.682353  0.682353  0.682353  0.682353  0.682353   \n",
-       "99039      63  0.164706  0.164706  0.164706  0.164706  0.164706  0.164706   \n",
-       "\n",
-       "              7         8         9  ...       775       776       777  \\\n",
-       "0      0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "1      0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "2      0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "3      0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "4      0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "...         ...       ...       ...  ...       ...       ...       ...   \n",
-       "99035  0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "99036  0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "99037  0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.000000   \n",
-       "99038  0.682353  0.682353  0.682353  ...  0.682353  0.682353  0.682353   \n",
-       "99039  0.164706  0.164706  0.164706  ...  0.164706  0.164706  0.164706   \n",
-       "\n",
-       "            778       779       780       781       782       783       784  \n",
-       "0      0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "1      0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "2      0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "3      0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "4      0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "...         ...       ...       ...       ...       ...       ...       ...  \n",
-       "99035  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "99036  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "99037  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  0.000000  \n",
-       "99038  0.682353  0.682353  0.682353  0.682353  0.682353  0.682353  0.682353  \n",
-       "99039  0.164706  0.164706  0.164706  0.164706  0.164706  0.164706  0.164706  \n",
-       "\n",
-       "[99040 rows x 785 columns]"
-      ]
-     },
-     "execution_count": 134,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "normalized_df"
    ]
   },
   {
@@ -1337,14 +915,14 @@
    "source": [
     "def show_image_np(data, index):\n",
     "    img = data[index]\n",
-    "    plt.imshow(img, cmap='gray')\n",
+    "    plt.imshow(df[index], cmap='gray')\n",
     "    plt.show()\n",
     "show_image_np(images, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +970,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1606,7 +1184,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.19 ('gpu_env')",
    "language": "python",
    "name": "python3"
   },
@@ -1621,6 +1199,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.19"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d0370418b23d3e6d627974f5b44612aacb169a42c01386bf7ba5dc9099819d8c"
+   }
   }
  },
  "nbformat": 4,
