--- a/RL/RL.ipynb
+++ b/RL/RL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
-    "gpu_options = tf.GPUOptions(allow_growth=True)  # init TF ...\n",
-    "config=tf.ConfigProto(gpu_options=gpu_options)  # w/o taking ...\n",
-    "with tf.Session(config=config): pass            # all GPU memory"
+    "# gpu_options = tf.GPUOptions(allow_growth=True)  # init TF ...\n",
+    "# config=tf.ConfigProto(gpu_options=gpu_options)  # w/o taking ...\n",
+    "# with tf.Session(config=config): pass            # all GPU memory\n",
+    "\n",
+    "# List physical GPUs and set memory growth\n",
+    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "for gpu in gpus:\n",
+    "    tf.config.experimental.set_memory_growth(gpu, True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'helpers' from 'c:\\\\Users\\\\p2308870\\\\Documents\\\\DELE_CA2\\\\RL\\\\helpers.py'>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import helpers\n",
     "import importlib\n",
@@ -40,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,22 +231,21 @@
     "        self.nb_hid_1 = nb_hid_1\n",
     "        self.nb_hid_2 = nb_hid_2\n",
     "        self.nb_out = nb_out\n",
-    "        \n",
-    "        tf.reset_default_graph()\n",
     "              \n",
-    "        self._x = tf.placeholder(name='xx', shape=[None, nb_in], dtype=tf.float32)\n",
-    "        self._y = tf.placeholder(name='yy', shape=[None, nb_out], dtype=tf.float32)\n",
+    "        self._x = tf.keras.Input(shape=(nb_in,), dtype=tf.float32, name='xx')\n",
+    "        self._y = tf.keras.Input(shape=(nb_out,), dtype=tf.float32, name='yy')\n",
     "\n",
-    "        self._h_hid_1 = tf.layers.dense(self._x, units=nb_hid_1,\n",
-    "                                        activation=tf.nn.relu, name='Hidden_1')\n",
-    "        self._h_hid_2 = tf.layers.dense(self._h_hid_1, units=nb_hid_2,\n",
-    "                                        activation=tf.nn.relu, name='Hidden_2')\n",
-    "        self._y_hat = tf.layers.dense(self._h_hid_2, units=nb_out,\n",
-    "                                      activation=None, name='Output')\n",
+    "        # Define hidden layers using tf.keras.layers.Dense\n",
+    "        self._h_hid_1 = tf.keras.layers.Dense(units=nb_hid_1, activation=tf.nn.relu, name='Hidden_1')(self._x)\n",
+    "        self._h_hid_2 = tf.keras.layers.Dense(units=nb_hid_2, activation=tf.nn.relu, name='Hidden_2')(self._h_hid_1)\n",
+    "        \n",
+    "        # Define output layer\n",
+    "        self._y_hat = tf.keras.layers.Dense(units=nb_out, activation=None, name='Output')(self._h_hid_2)\n",
     "        self._loss = tf.losses.mean_squared_error(self._y, self._y_hat)\n",
     "\n",
-    "        self._optimizer = tf.train.RMSPropOptimizer(learning_rate=lr)\n",
-    "        self._train_op = self._optimizer.minimize(self._loss)\n",
+    "        self._optimizer = tf.keras.optimizers.RMSprop(learning_rate=lr)\n",
+    "        trainable_vars = self.model.trainable_variables\n",
+    "        self._train_op = self._optimizer.minimize(self._loss, var_list=trainable_vars)\n",
     "\n",
     "        self._sess = tf.Session()\n",
     "        self._sess.run(tf.global_variables_initializer())\n",
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,13 +564,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Pendulum2DEnv():\n",
     "    def __init__(self):\n",
-    "        self._env = gym.make('Pendulum-v0')\n",
+    "        self._env = gym.make('Pendulum-v1')\n",
     "        \n",
     "        self.observation_space = gym.spaces.Box(\n",
     "            low=np.array([-np.pi, -8.0]), high=np.array([np.pi, 8.0]), dtype=np.float32 )\n",
@@ -585,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,9 +625,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\p2308870\\.conda\\envs\\gpu_env\\lib\\site-packages\\gym\\spaces\\box.py:127: UserWarning: \u001b[33mWARN: Box bound precision lowered by casting to float32\u001b[0m\n",
+      "  logger.warn(f\"Box bound precision lowered by casting to {self.dtype}\")\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'TFNeuralNet' object has no attribute 'model'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[118], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m env \u001b[38;5;241m=\u001b[39m Pendulum2DEnv()\n\u001b[1;32m----> 2\u001b[0m trace, model, mem \u001b[38;5;241m=\u001b[39m \u001b[43mexperiment_pendulum\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[117], line 2\u001b[0m, in \u001b[0;36mexperiment_pendulum\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexperiment_pendulum\u001b[39m():\n\u001b[1;32m----> 2\u001b[0m     neural_net \u001b[38;5;241m=\u001b[39m \u001b[43mTFNeuralNet\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnb_in\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_hid_1\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_hid_2\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m64\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnb_out\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlr\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m0.00025\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      4\u001b[0m     model \u001b[38;5;241m=\u001b[39m TFFunctApprox(neural_net,\n\u001b[0;32m      5\u001b[0m                           env\u001b[38;5;241m.\u001b[39mobservation_space\u001b[38;5;241m.\u001b[39mlow,\n\u001b[0;32m      6\u001b[0m                           env\u001b[38;5;241m.\u001b[39mobservation_space\u001b[38;5;241m.\u001b[39mhigh,\n\u001b[0;32m      7\u001b[0m                           rew_mean\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m210\u001b[39m,\n\u001b[0;32m      8\u001b[0m                           rew_std\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m,\n\u001b[0;32m      9\u001b[0m                           nb_actions\u001b[38;5;241m=\u001b[39menv\u001b[38;5;241m.\u001b[39maction_space\u001b[38;5;241m.\u001b[39mn)\n\u001b[0;32m     11\u001b[0m     mem \u001b[38;5;241m=\u001b[39m Memory(max_len\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100000\u001b[39m, state_shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m2\u001b[39m,), state_dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mfloat\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[110], line 20\u001b[0m, in \u001b[0;36mTFNeuralNet.__init__\u001b[1;34m(self, nb_in, nb_hid_1, nb_hid_2, nb_out, lr)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loss \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mlosses\u001b[38;5;241m.\u001b[39mmean_squared_error(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_y, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_y_hat)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_optimizer \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mkeras\u001b[38;5;241m.\u001b[39moptimizers\u001b[38;5;241m.\u001b[39mRMSprop(learning_rate\u001b[38;5;241m=\u001b[39mlr)\n\u001b[1;32m---> 20\u001b[0m trainable_vars \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mtrainable_variables\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_train_op \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_optimizer\u001b[38;5;241m.\u001b[39mminimize(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_loss, var_list\u001b[38;5;241m=\u001b[39mtrainable_vars)\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sess \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mSession()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TFNeuralNet' object has no attribute 'model'"
+     ]
+    }
+   ],
    "source": [
     "env = Pendulum2DEnv()\n",
     "trace, model, mem = experiment_pendulum()\n",
@@ -623,7 +660,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "tts = q_learning(env, frames=25000, gamma=.99,\n",
     "                 eps_decay_steps=20000, eps_target=0.1, batch_size=4096,\n",
@@ -634,7 +682,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "tts = q_learning(env, frames=5000, gamma=.99,\n",
     "                 eps_decay_steps=20000, eps_target=0.1, batch_size=4096,\n",
@@ -645,7 +704,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "helpers.plot_all(env, model, mem, trace, print_=True)"
    ]
@@ -654,7 +724,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "model._model.save('./tf_models/Pendulum.ckpt')\n"
    ]
@@ -663,7 +744,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "model._model.load('./tf_models/Pendulum.ckpt')\n"
    ]
@@ -672,7 +764,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.7.8 64-bit' requires ipykernel package.\n",
+      "Run the following command to install 'ipykernel' into the Python environment. \n",
+      "Command: '\"c:/Program Files (x86)/Microsoft Visual Studio/Shared/Python37_64/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# In Jupyter, press squre '■' in top menu to quit animation\n",
     "try: evaluate(env, model, frames=float('inf'), eps=0.0, render=True)\n",
@@ -682,8 +785,27 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3.8.19 ('gpu_env')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.19"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "caafb4240398362289dee49613442c2e3dc97f83d57493b7ca8993fac85035ed"
+   }
   }
  },
  "nbformat": 4,
