--- a/Model_testing_CGAN.ipynb
+++ b/Model_testing_CGAN.ipynb
@@ -9666,7 +9666,158 @@
       "Epoch 54/200, Batch 85/86 [D loss: 0.6614174544811249, acc.: 59.86%] [G loss: 0.8137837648391724]\n",
       "32/32 [==============================] - 0s 3ms/step\n",
       "Epoch 54/200, Batch 86/86 [D loss: 0.6565865576267242, acc.: 62.11%] [G loss: 0.8375659584999084]\n",
-      "4/4 [==============================] - 0s 3ms/step\n"
+      "4/4 [==============================] - 0s 3ms/step\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 1/86 [D loss: 0.6456455886363983, acc.: 64.50%] [G loss: 0.8645479083061218]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 2/86 [D loss: 0.6438007652759552, acc.: 63.96%] [G loss: 0.8719285130500793]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 3/86 [D loss: 0.6457743942737579, acc.: 63.67%] [G loss: 0.8634393215179443]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 4/86 [D loss: 0.652515172958374, acc.: 61.77%] [G loss: 0.8289396166801453]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 5/86 [D loss: 0.6620902717113495, acc.: 60.30%] [G loss: 0.8019901514053345]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 6/86 [D loss: 0.6701032221317291, acc.: 57.86%] [G loss: 0.8128511905670166]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 7/86 [D loss: 0.6604825854301453, acc.: 61.18%] [G loss: 0.818949282169342]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 8/86 [D loss: 0.6494172215461731, acc.: 64.21%] [G loss: 0.8350218534469604]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 9/86 [D loss: 0.6441388428211212, acc.: 64.40%] [G loss: 0.8449631929397583]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 10/86 [D loss: 0.6432588696479797, acc.: 64.89%] [G loss: 0.8466137647628784]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 11/86 [D loss: 0.6483174264431, acc.: 62.65%] [G loss: 0.8064476251602173]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 12/86 [D loss: 0.6648178100585938, acc.: 59.72%] [G loss: 0.8040447235107422]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 13/86 [D loss: 0.6663166582584381, acc.: 58.45%] [G loss: 0.7971007823944092]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 14/86 [D loss: 0.656289666891098, acc.: 61.28%] [G loss: 0.8147896528244019]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 15/86 [D loss: 0.6533932685852051, acc.: 64.01%] [G loss: 0.8520359992980957]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 16/86 [D loss: 0.6431850790977478, acc.: 64.26%] [G loss: 0.8774225115776062]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 17/86 [D loss: 0.6504064202308655, acc.: 62.70%] [G loss: 0.864782989025116]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 18/86 [D loss: 0.651982456445694, acc.: 61.96%] [G loss: 0.8502975702285767]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 19/86 [D loss: 0.6664101481437683, acc.: 58.89%] [G loss: 0.8221228122711182]\n",
+      "32/32 [==============================] - 0s 6ms/step\n",
+      "Epoch 55/200, Batch 20/86 [D loss: 0.6545795202255249, acc.: 61.38%] [G loss: 0.8153277635574341]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 21/86 [D loss: 0.6590385138988495, acc.: 60.79%] [G loss: 0.8220824003219604]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 22/86 [D loss: 0.6599812209606171, acc.: 59.86%] [G loss: 0.8297926783561707]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 23/86 [D loss: 0.6458797454833984, acc.: 64.94%] [G loss: 0.8243717551231384]\n",
+      "32/32 [==============================] - 0s 6ms/step\n",
+      "Epoch 55/200, Batch 24/86 [D loss: 0.6472643613815308, acc.: 63.57%] [G loss: 0.8309730887413025]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 25/86 [D loss: 0.647166520357132, acc.: 64.70%] [G loss: 0.8263723254203796]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 26/86 [D loss: 0.653560996055603, acc.: 63.62%] [G loss: 0.8125613927841187]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 27/86 [D loss: 0.6575149595737457, acc.: 60.50%] [G loss: 0.7927765250205994]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 28/86 [D loss: 0.6656955778598785, acc.: 59.28%] [G loss: 0.8028960227966309]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 29/86 [D loss: 0.656349778175354, acc.: 62.65%] [G loss: 0.8297648429870605]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 30/86 [D loss: 0.6570520401000977, acc.: 61.67%] [G loss: 0.8487001657485962]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 31/86 [D loss: 0.6391661167144775, acc.: 67.09%] [G loss: 0.8713868856430054]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 32/86 [D loss: 0.6496331095695496, acc.: 62.60%] [G loss: 0.8591291904449463]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 33/86 [D loss: 0.6580570936203003, acc.: 60.64%] [G loss: 0.8377296924591064]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 34/86 [D loss: 0.6665724515914917, acc.: 59.72%] [G loss: 0.8130130767822266]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 35/86 [D loss: 0.6696301400661469, acc.: 58.45%] [G loss: 0.8139762878417969]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 36/86 [D loss: 0.655268669128418, acc.: 62.45%] [G loss: 0.8128729462623596]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 37/86 [D loss: 0.6508715450763702, acc.: 63.18%] [G loss: 0.8192849159240723]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 38/86 [D loss: 0.6450594961643219, acc.: 64.11%] [G loss: 0.8333995938301086]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 39/86 [D loss: 0.647861123085022, acc.: 63.57%] [G loss: 0.8311973810195923]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 40/86 [D loss: 0.6566490530967712, acc.: 61.67%] [G loss: 0.8158765435218811]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 41/86 [D loss: 0.6554815173149109, acc.: 60.74%] [G loss: 0.809240460395813]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 42/86 [D loss: 0.6664654314517975, acc.: 58.45%] [G loss: 0.8093883991241455]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 43/86 [D loss: 0.6621839702129364, acc.: 61.52%] [G loss: 0.8112924695014954]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 44/86 [D loss: 0.6540402472019196, acc.: 62.50%] [G loss: 0.8421024084091187]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 45/86 [D loss: 0.6463569402694702, acc.: 65.19%] [G loss: 0.8628641366958618]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 46/86 [D loss: 0.6543495953083038, acc.: 61.67%] [G loss: 0.8680500984191895]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 47/86 [D loss: 0.65951207280159, acc.: 59.81%] [G loss: 0.8561919927597046]\n",
+      "32/32 [==============================] - 0s 6ms/step\n",
+      "Epoch 55/200, Batch 48/86 [D loss: 0.6528596580028534, acc.: 61.77%] [G loss: 0.8267145752906799]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 49/86 [D loss: 0.6594763696193695, acc.: 59.77%] [G loss: 0.8037947416305542]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 50/86 [D loss: 0.6623237133026123, acc.: 60.79%] [G loss: 0.818517804145813]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 51/86 [D loss: 0.6536871492862701, acc.: 62.11%] [G loss: 0.8263391852378845]\n",
+      "32/32 [==============================] - 0s 6ms/step\n",
+      "Epoch 55/200, Batch 52/86 [D loss: 0.6476190388202667, acc.: 64.70%] [G loss: 0.8265995979309082]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 53/86 [D loss: 0.651633232831955, acc.: 63.48%] [G loss: 0.8452322483062744]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 54/86 [D loss: 0.6528465747833252, acc.: 62.84%] [G loss: 0.8312378525733948]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 55/86 [D loss: 0.652047723531723, acc.: 61.87%] [G loss: 0.8185902833938599]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 56/86 [D loss: 0.6565776765346527, acc.: 62.11%] [G loss: 0.7995875477790833]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 57/86 [D loss: 0.6695317327976227, acc.: 56.93%] [G loss: 0.8147962093353271]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 58/86 [D loss: 0.6616424918174744, acc.: 60.40%] [G loss: 0.8204655051231384]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 59/86 [D loss: 0.651513934135437, acc.: 62.45%] [G loss: 0.8450796008110046]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 60/86 [D loss: 0.6517433226108551, acc.: 63.43%] [G loss: 0.864662766456604]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 61/86 [D loss: 0.65149986743927, acc.: 62.89%] [G loss: 0.8544386029243469]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 62/86 [D loss: 0.6555230021476746, acc.: 61.18%] [G loss: 0.8408700227737427]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 63/86 [D loss: 0.6531741917133331, acc.: 62.94%] [G loss: 0.8255941867828369]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 64/86 [D loss: 0.6611609160900116, acc.: 60.01%] [G loss: 0.8130082488059998]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 65/86 [D loss: 0.6611827909946442, acc.: 60.84%] [G loss: 0.8132507801055908]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 66/86 [D loss: 0.6522496342658997, acc.: 63.38%] [G loss: 0.8226763606071472]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 67/86 [D loss: 0.6469077169895172, acc.: 63.92%] [G loss: 0.8299204111099243]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 68/86 [D loss: 0.6449006795883179, acc.: 64.40%] [G loss: 0.8286349773406982]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 69/86 [D loss: 0.6475408375263214, acc.: 64.01%] [G loss: 0.8223103284835815]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 70/86 [D loss: 0.6571410000324249, acc.: 60.94%] [G loss: 0.8062859177589417]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 71/86 [D loss: 0.6617270112037659, acc.: 60.30%] [G loss: 0.8087712526321411]\n",
+      "32/32 [==============================] - 0s 5ms/step\n",
+      "Epoch 55/200, Batch 72/86 [D loss: 0.6550755500793457, acc.: 62.26%] [G loss: 0.823583722114563]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 73/86 [D loss: 0.6528899669647217, acc.: 62.74%] [G loss: 0.8462034463882446]\n",
+      "32/32 [==============================] - 0s 3ms/step\n",
+      "Epoch 55/200, Batch 74/86 [D loss: 0.6503284573554993, acc.: 63.33%] [G loss: 0.8754491209983826]\n",
+      "32/32 [==============================] - 0s 4ms/step\n",
+      "Epoch 55/200, Batch 75/86 [D loss: 0.6431199908256531, acc.: 64.21%] [G loss: 0.8541122674942017]\n",
+      "32/32 [==============================] - 0s 4ms/step\n"
      ]
     }
    ],
